ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.4.0-rc1
    • Affects Version/s: 2.4.0-rc0
    • Component/s: Sharding
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      To reproduce:

      • Run a sharded cluster on 2.2 that contains at least one collection created in 2.0.
      • Start up a mongos with the --upgrade flag to start the process of converting chunks metadata to have the "lastModEpoch" field
      • After mongos is up and running:
        { "_id": 1, "version": 3, "minCompatibleVersion": 3, "currentVersion": 4, "clusterId": ObjectId("511eb84c6e9141cef5f7a0ab"), "upgradeId": ObjectId("000000000000000000000000"), "upgradeState": { } } 
        

      The upgradeId and upgradeState fields are still there.

            Assignee:
            Greg Studer (Inactive)
            Reporter:
            Michael O'Brien
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: