SERVER-8596 cleanup upgradeId field after upgrade